[Go] Implement reposts using a naive approach.
